convert parents screen to location screen, update bottom_menu.xml, try something to get location services

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -4,4 +4,5 @@
     <string name="parents">parents</string>
     <string name="attendance">attendance</string>
     <string name="profile">profile</string>
+    <string name="location">location</string>
 </resources>
