--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,11 @@
     <string name="attendance">attendance</string>
     <string name="profile">profile</string>
     <string name="location">location</string>
+    <string name="menu_profile">Profile</string>
+    <string name="menu_attendanceList">Attendance List</string>
+    <string name="menu_addStudent">Add Student</string>
+    <string name="menu_location">Location</string>
+    <string name="menu_signOut">Sign Out</string>
+    <string name="open">Open Drawer</string>
+    <string name="close">Close Drawer</string>
 </resources>
