--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="attendance">attendance</string>
     <string name="profile">profile</string>
-    <string name="google_api_key">AIzaSyDpmCLshOeUcGllKLXDrHKooRQO9VVj1us</string>
+    <string name="google_api_key">YOUR API KEY</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="location">location</string>
